--- a/joker/src/main/res/layout/activity_joke_library.xml
+++ b/joker/src/main/res/layout/activity_joke_library.xml
@@ -4,15 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".JokeLibraryActivity">
 
-    <TextView
-        android:id="@+id/display_joke_tv"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="serif-monospace"
-        android:padding="@dimen/padding_10dp"
-        android:text="@string/display_joke_library"/>
+        android:layout_marginRight="6dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="20dp"
+        android:padding="16dp"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="5dp">
+
+        <TextView
+            android:id="@+id/display_joke_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="serif-monospace"
+            android:padding="@dimen/padding_10dp"
+            android:layout_gravity="center"
+            android:text="@string/display_joke_library"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@color/colorAccent" />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
