--- a/joker/src/main/res/layout/activity_joke_library.xml
+++ b/joker/src/main/res/layout/activity_joke_library.xml
@@ -1,38 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryLight"
+    android:fitsSystemWindows="true"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
     tools:context=".JokeLibraryActivity">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginTop="20dp"
-        android:padding="16dp"
+        android:layout_marginBottom="@dimen/margin_6dp"
+        android:layout_marginLeft="@dimen/margin_6dp"
+        android:layout_marginRight="@dimen/margin_6dp"
+        android:layout_marginTop="@dimen/margin_20dp"
+        android:padding="@dimen/padding_16dp"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="@dimen/card_view_radius">
 
-        <TextView
-            android:id="@+id/display_joke_tv"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="serif-monospace"
-            android:padding="@dimen/padding_10dp"
-            android:layout_gravity="center"
-            android:text="@string/display_joke_library"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/colorAccent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/display_joke_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/margin_20dp"
+                android:layout_marginTop="@dimen/margin_20dp"
+                android:fontFamily="serif-monospace"
+                android:padding="@dimen/padding_10dp"
+                android:text="@string/display_joke_library"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@color/colorAccent" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorAccent"
+                android:paddingTop="@dimen/padding_10dp" />
+
+            <ImageButton
+                android:id="@+id/new_joke_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/get_new_joke"
+                android:padding="@dimen/padding_10dp"
+                android:src="@drawable/ic_autorenew_24dp" />
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
