--- a/joker/src/main/res/values/dimens.xml
+++ b/joker/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="padding_10dp">10dp</dimen>
+    <dimen name="margin_6dp">6dp</dimen>
+    <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="padding_16dp">16dp</dimen>
+    <dimen name="card_view_radius">5dp</dimen>
 </resources>
