--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="progress_bar_dimens">42dp</dimen>
+    <dimen name="button_padding_16dp">16dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
 </resources>
